public class Tags
{
    public const string fairySpawner = "fairySpawner";
    public const string MonsterSpawner = "MonsterSpawner";
    public const string BattleLine = "BattleLine";
    public const string SkillButton = "SkillButton";
    public const string StageManager = "StageManager";
    public const string Monster = "Monster";
    public const string CameraManager = "CameraManager";
    public const string VirtualCamera = "VirtualCamera";
    public const string ObjectPoolManager = "ObjectPool";
    public const string SkillSpawner = "SkillSpawner";
    public const string Fever = "Fever";
    public const string DebugMgr = "DebugMgr";
    public const string Slider = "Slider";
    public const string Player = "Player";
    public const string EndPanel = "EndPanel";
    public const string ChainEffect = "ChainEffect";
    public const string HPUI = "HPUI";
    public const string EffectPool = "EffectPool";
    public const string HpBar = "HpBar";
    public const string ShieldBar = "ShieldBar";
    public const string ResultMoniter = "ResultMoniter";
    public const string Town = "Town";
    public const string Canvas = "Canvas";
    public const string UIManager = "UIManager";
    public const string ModalPanel = "ModalPanel";
}

public class Layers
{
    public const string Player = "Player";
    public const string Monster = "Monster";
    public const string Background = "Background";
    public const string Dead = "Dead";
}

public class SceneName
{
    public const string BattleScene = "BattleScene";
    public const string MainScene = "MainScene";
    public const string TitleScene = "TitleScene";
}

public class Triggers
{
    public const string MeleeAttack = "MeleeAttack";
    public const string ProjectileAttack = "ProjectileAttack";
    public const string NormalSkill = "NormalSkill";
    public const string ReinforcedSkill = "ReinforcedSkill";
    public const string SpecialSkill = "SpecialSkill";
    public const string Dead = "Dead";
    public const string IsMoving = "IsMoving";
    public const string IsStunning = "IsStunning";
}